# exoclaw-temporal

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mise.toml  pyproject.toml
examples/: test_session_based.py  test_turn_based.py
exoclaw_temporal/: __init__.py  config.py
exoclaw_temporal/activities/: __init__.py  conversation.py  llm.py  tools.py
exoclaw_temporal/session_based/: __init__.py  __main__.py  app.py  worker.py
exoclaw_temporal/session_based/workflows/: __init__.py  agent_session.py
exoclaw_temporal/turn_based/: __init__.py  __main__.py  app.py  worker.py
exoclaw_temporal/turn_based/workflows/: __init__.py  agent_turn.py
k8s/: kind-config.yaml
k8s/temporal/: values.yaml
k8s/worker/: deployment.yaml  pvc.yaml
scripts/: bounce_demo.sh
