[project]
name = "exoclaw-temporal"
version = "0.1.0"
description = "Exoclaw on Temporal — durable AI agent execution with two approaches"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "exoclaw contributors"}
]

dependencies = [
    "exoclaw>=0.2.3",
    "exoclaw-nanobot>=0.1.0",
    "temporalio>=1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.1",
]

[project.scripts]
exoclaw-temporal-turn = "exoclaw_temporal.turn_based.__main__:main"
exoclaw-temporal-session = "exoclaw_temporal.session_based.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exoclaw_temporal"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
